# Anki-python-deck-tool

./: .claude-instructions.md  .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  =2.0.0  BRANCH_CLEANUP_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  VSCODE_TASKS.md  VSCODE_TASKS_SETUP.md  action-plan-silent-media-errors.md  anki-yaml-tool.spec  coverage.xml  justfile  pyproject.toml  requirements.txt
.backup/: build_apkg.py  push_to_anki.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-executables.yml  build_release.yml  ci.yml  release.yml  security.yml
assets/: icon.icns
build_scripts/: README.md  build_executable.py
configs/: debug_config.yaml  japanese_num.yaml
data/: debug_deck.yaml  my_deck.apkg  my_deck.yaml
docs/: ARCHITECTURE.md  BRANCH_CLEANUP_SUMMARY.md  DOCUMENTATION_ORGANIZATION.md  GITHUB_ACTIONS_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MANUAL_SETUP_GUIDE.md  README.md  VERSIONING.md
examples/: README.md
examples/advanced/: README.md  config_fragment.yaml  data_fragment.yaml  deck.yaml
examples/audio/: AUDIO_GENERATION.md  README.md  config.yaml  data.yaml  deck.yaml
examples/basic/: README.md  config.yaml  data.yaml  deck.yaml
examples/cloze/: README.md  config.yaml  data.yaml  deck.yaml
examples/historical/: README.md  config.yaml  data.yaml  deck.yaml
examples/japanese-numbers/: num_jap.yaml
examples/language-learning/: README.md  config.yaml  data.yaml  deck.yaml
examples/math/: config.yaml  data.yaml  deck.yaml
examples/medical/: README.md  config.yaml  data.yaml  deck.yaml
examples/technical/: README.md  config.yaml  data.yaml  deck.yaml
examples/test/: deck.yaml  test.yaml
plans/: gui_framework_evaluation.md
scripts/: README_AUDIO.md  build.py  convert_examples.py  generate_audio.py  install-system-wide.ps1  install-system-wide.sh  print_color.py
src/anki_tool/: cli.py  gui.py
src/anki_tool/core/: builder.py  config.py  connector.py  exceptions.py  media.py  validators.py
src/anki_yaml_tool/: cli.py
src/anki_yaml_tool/cli/: __init__.py  cli.py  cli_package.py  deck.py  package.py
src/anki_yaml_tool/core/: adapter.py  batch.py  builder.py  config.py  config_file.py  connector.py  deck_service.py  exceptions.py  exporter.py  interactive.py  logging_config.py  media.py  models.py  pusher.py  validators.py  watcher.py  yaml_advanced.py
src/anki_yaml_tool/gui/: __init__.py  main.py  styles.py  widgets.py  window.py
src/anki_yaml_tool/templates/: __init__.py
tests/: test_builder.py  test_cli.py  test_cli_batch.py  test_cli_config.py  test_cli_init.py  test_cli_pull.py  test_cli_push_yaml.py  test_cli_verbose.py  test_config.py  test_connector.py  test_connector_pull.py  test_connector_update.py  test_deck_service.py  test_exceptions.py  test_exporter.py  test_integration.py  test_interactive.py  test_media.py  test_pusher.py  test_validators.py  test_yaml_advanced.py
tests/fixtures/media/: README.md
