[project]
name = "anki-yaml-tool"
version = "0.1.0"
description = "A generic tool for building and pushing Anki decks from YAML"
dependencies = [
    "genanki",
    "requests",
    "pyyaml",
    "click",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0-only"}

[project.scripts]
anki-yaml-tool = "anki_yaml_tool.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
    "types-requests",
    "types-PyYAML",
    "pre-commit>=3.5.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --cov=anki_yaml_tool --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["src/anki_yaml_tool"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
precision = 2
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert_used - common in tests
